# knowledge-srv

./: main.py  pyproject.toml  server.py
src/: main.py
src/api/: __init__.py  router.py
src/api/v1/: __init__.py  chat.py  collections.py  user.py
src/core/: api_contract.py  response_code.py
src/dao/: base_dao.py  user_dao.py
src/db/: pg_db.py
src/dto/: embedding_dto.py
src/models/: __init__.py  ai_ext_message.py  embedding.py  user.py
src/srvices/: base_service.py  user_service.py
src/utils/: logger.py
