[project]
name = "knowledge-srv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "uvicorn>=0.41.0",
]
